--- a/site/package.json
+++ b/site/package.json
@@ -38,8 +38,8 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.553.0",
     "prism-react-renderer": "^2.4.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "satori": "^0.18.3",
     "sharp": "^0.34.5",
     "typescript": "^5.9.3"
@@ -62,6 +62,8 @@
   "dependencies": {
     "@mui/material": "^7.3.5",
     "@mui/system": "^7.3.5",
+    "@types/react": "19.2.5",
+    "@types/react-dom": "19.2.3",
     "react-countup": "^6.5.3",
     "swiper": "^11.2.10"
   }
