fix: exclude source maps from npm package to reduce bundle size

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "files": [
     "dist",
     "!dist/test",
-    "!dist/src/__mocks__"
+    "!dist/src/__mocks__",
+    "!dist/**/*.map"
   ],
   "engines": {
     "node": ">=20.0.0"
