--- a/examples/browser-websocket-chat/package.json
+++ b/examples/browser-websocket-chat/package.json
@@ -8,9 +8,12 @@
     "test": "node test-websocket.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "cookie-parser": "^1.4.6",
-    "ws": "^8.14.2"
+    "express": "^4.21.2",
+    "express-session": "^1.18.2",
+    "cookie-parser": "^1.4.7",
+    "ws": "^8.18.3",
+    "openai": "^4.104.0",
+    "playwright-extra": "^4.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
