chore: add linting tools for explicit /index imports
Add custom scripts to enforce explicit /index in directory imports:
- check-index-imports.js: validates all imports include /index
- fix-index-imports.js: auto-fixes violations

This prepares the codebase for eventual ESM migration by ensuring
all directory imports are explicit (e.g., './types/index' instead
of './types').

--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "lint:site": "npx @biomejs/biome lint site",
     "lint:src": "npx @biomejs/biome lint src",
     "lint:tests": "npx @biomejs/biome lint test",
+    "lint:index": "node scripts/check-index-imports.js",
+    "lint:index:fix": "node scripts/fix-index-imports.js",
     "lint": "npm run lint:src",
     "local:web": "npm run dev --prefix src/app",
     "local": "ts-node --cwdMode --transpileOnly src/main.ts",
