--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,6 +128,10 @@ jobs:
         run: |
           npm run lint
 
+      - name: Check Index Imports
+        run: |
+          npm run lint:index
+
       - name: Run Style Check
         run: |
           npm run format:check
