--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@anthropic-ai/claude-agent-sdk": "^0.1.42",
     "@aws-sdk/client-bedrock-agent-runtime": "^3.927.0",
     "@aws-sdk/client-bedrock-runtime": "^3.927.0",
+    "@aws-sdk/client-pricing": "^3.936.0",
     "@aws-sdk/client-sagemaker-runtime": "^3.927.0",
     "@aws-sdk/credential-provider-sso": "^3.927.0",
     "@aws-sdk/types": "^3.922.0",
@@ -227,7 +228,6 @@
     "@anthropic-ai/sdk": "^0.70.0",
     "@apidevtools/json-schema-ref-parser": "^12.0.2",
     "@googleapis/sheets": "^12.0.0",
-    "gcp-metadata": "^8.1.2",
     "@inquirer/checkbox": "^4.3.1",
     "@inquirer/confirm": "^5.1.20",
     "@inquirer/core": "^10.3.1",
@@ -263,6 +263,7 @@
     "fast-safe-stringify": "^2.1.1",
     "fast-xml-parser": "^5.3.1",
     "fastest-levenshtein": "^1.0.16",
+    "gcp-metadata": "^8.1.2",
     "glob": "^11.0.3",
     "http-z": "^7.1.3",
     "istextorbinary": "^9.5.0",
