Revert "chore(deps): upgrade cache-manager from v4 to v7 (#6295)"
This reverts commit 230dba4ef02a9509c8d831df1e96b37551755db5.

--- a/src/app/tsconfig.app.json
+++ b/src/app/tsconfig.app.json
@@ -10,7 +10,6 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "types": ["vitest/globals"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -24,6 +23,5 @@
     "strict": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["./src"],
-  "exclude": ["./src/**/*.test.ts", "./src/**/*.test.tsx"]
+  "include": ["./src"]
 }
