docs(examples): update OpenAI Codex SDK example to use gpt-5.1-codex model
- Update example to explicitly configure gpt-5.1-codex model
- Add comprehensive comparison document between OpenAI Codex SDK and Claude Agent SDK
- Document test results with 100% pass rate using gpt-5.1-codex
- Compare architecture, features, and use cases for both providers

--- a/examples/openai-codex-sdk/basic/promptfooconfig.yaml
+++ b/examples/openai-codex-sdk/basic/promptfooconfig.yaml
@@ -5,7 +5,9 @@ prompts:
   - 'Write a Python function that calculates the factorial of a number. Output only the code.'
 
 providers:
-  - openai:codex-sdk
+  - id: openai:codex-sdk
+    config:
+      model: gpt-5.1-codex
 
 tests:
   - vars: {}
