--- a/.github/workflows/changelog-check.yml
+++ b/.github/workflows/changelog-check.yml
@@ -39,36 +39,6 @@ jobs:
           HAS_NO_CHANGELOG_LABEL: ${{ contains(github.event.pull_request.labels.*.name, 'no-changelog') }}
           HAS_DEPENDENCIES_LABEL: ${{ contains(github.event.pull_request.labels.*.name, 'dependencies') }}
           BASE_REF: ${{ github.event.pull_request.base.ref }}
-        run: |
-          # Check if CHANGELOG.md was modified
-          git fetch origin "$BASE_REF"
-          CHANGELOG_MODIFIED=$(git diff --name-only origin/"$BASE_REF"...HEAD | grep -c "^CHANGELOG.md$" || true)
-
-          if [ "$CHANGELOG_MODIFIED" -gt 0 ]; then
-            echo "✅ CHANGELOG.md has been updated"
-            exit 0
-          fi
-
-          # Check if PR has no-changelog label
-          if [ "$HAS_NO_CHANGELOG_LABEL" = "true" ]; then
-            echo "✅ PR has 'no-changelog' label - bypassing check"
-            exit 0
-          fi
-
-          # Check if PR has dependencies label
-          if [ "$HAS_DEPENDENCIES_LABEL" = "true" ]; then
-            echo "✅ PR has 'dependencies' label - bypassing check"
-            exit 0
-          fi
-
-          # All PRs must update the changelog
-          echo "❌ Changelog update required"
-          echo ""
-          echo "ALL PRs must update CHANGELOG.md under the 'Unreleased' section."
-          echo ""
-          echo "This ensures complete traceability of all changes to the codebase."
-          echo ""
-          echo "To bypass this check, add one of these labels:"
-          echo "  - 'no-changelog' (exceptional cases only)"
-          echo "  - 'dependencies' (automated dependency updates)"
-          exit 1
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          BRANCH_NAME: ${{ github.head_ref }}
+        run: node scripts/validate-changelog.js
