--- a/package.json
+++ b/package.json
@@ -128,8 +128,6 @@
     "@swc/jest": "^0.2.39",
     "@types/async": "^3.2.25",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/cache-manager": "^4.0.6",
-    "@types/cache-manager-fs-hash": "^0.0.5",
     "@types/cli-progress": "^3.11.6",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
@@ -243,8 +241,7 @@
     "async": "^3.2.6",
     "better-sqlite3": "12.4.6",
     "binary-extensions": "^3.1.0",
-    "cache-manager": "^4.1.0",
-    "cache-manager-fs-hash": "^3.0.0",
+    "cache-manager": "^7.2.5",
     "chalk": "^4.1.2",
     "chokidar": "4.0.3",
     "cli-progress": "^3.12.0",
@@ -272,6 +269,8 @@
     "js-rouge": "^3.0.0",
     "js-yaml": "^4.1.1",
     "jsdom": "^26.1.0",
+    "keyv": "^5.5.4",
+    "keyv-file": "^5.3.3",
     "lru-cache": "^11.2.2",
     "mathjs": "^15.1.0",
     "minimatch": "^10.1.1",
