--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,7 +4,10 @@
       "release-type": "node",
       "package-name": "promptfoo",
       "changelog-path": "CHANGELOG.md",
-      "extra-files": ["package.json"]
+      "extra-files": ["package.json"],
+      "bump-minor-pre-major": true,
+      "bump-patch-for-minor-pre-major": true,
+      "bootstrap-sha": "779729198d01eacd9d00b0796d62cc5a16f0ccac"
     }
   }
 }
