--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "@anthropic-ai/claude-agent-sdk": "^0.1.53",
     "@aws-sdk/client-bedrock-agent-runtime": "^3.939.0",
     "@aws-sdk/client-bedrock-runtime": "^3.939.0",
+    "@aws-sdk/client-pricing": "^3.939.0",
     "@aws-sdk/client-sagemaker-runtime": "^3.939.0",
     "@aws-sdk/credential-provider-sso": "^3.939.0",
     "@aws-sdk/types": "^3.936.0",
@@ -193,6 +194,7 @@
     "@anthropic-ai/claude-agent-sdk": "^0.1.53",
     "@aws-sdk/client-bedrock-agent-runtime": "^3.939.0",
     "@aws-sdk/client-bedrock-runtime": "^3.939.0",
+    "@aws-sdk/client-pricing": "^3.939.0",
     "@aws-sdk/client-sagemaker-runtime": "^3.939.0",
     "@aws-sdk/credential-provider-sso": "^3.939.0",
     "@azure/ai-projects": "^1.0.1",
