fix(providers): address CodeRabbit review feedback
- Fix train problem expected answer (11:34 not 11:00) in deepseek example
- Fix Claude Opus model ID in docs (20250929 → 20251101)
- Add provisional pricing comment for GPT-5 series

--- a/examples/azure/deepseek/promptfooconfig.yaml
+++ b/examples/azure/deepseek/promptfooconfig.yaml
@@ -33,7 +33,7 @@ tests:
         If the stations are 280 miles apart, at what time will the trains meet?
     assert:
       - type: contains-any
-        value: ['11:00', '11 AM', '11:00 AM']
+        value: ['11:34', '11:34 AM', '1 hour 34 minutes', '94 minutes']
       - type: llm-rubric
         value: Shows clear step-by-step reasoning
 
