--- a/examples/azure/openai/promptfooconfig.yaml
+++ b/examples/azure/openai/promptfooconfig.yaml
@@ -5,15 +5,16 @@ prompts:
   - 'Generate one very interesting fact about {{topic}}'
 
 providers:
-  - id: azure:chat:gpt-4o-deployment1
+  # GPT-5 - Latest flagship model
+  - id: azure:chat:gpt-5
     config:
       apiHost: 'your-org.openai.azure.com'
 
-  # Example of reasoning model setup
-  - id: azure:chat:o3-mini-deployment
+  # o3-mini - Reasoning model
+  - id: azure:chat:o3-mini
     config:
       apiHost: 'your-org.openai.azure.com'
-      # Flag to indicate this is a reasoning model (o1, o3-mini, etc.)
+      # Reasoning models use max_completion_tokens instead of max_tokens
       isReasoningModel: true
 
 defaultTest:
@@ -30,6 +31,6 @@ tests:
       - type: similar
         value: Bananas are naturally radioactive.
         provider:
-          id: azure:embeddings:ada-deployment1
+          id: azure:embeddings:text-embedding-3-large
           config:
             apiHost: 'your-org.openai.azure.com'
