--- a/examples/azure/comparison/promptfooconfig.yaml
+++ b/examples/azure/comparison/promptfooconfig.yaml
@@ -9,15 +9,15 @@ prompts:
     Question: {{question}}
 
 providers:
-  # OpenAI GPT-4.1
-  - id: azure:chat:gpt-4.1
-    label: gpt-4.1
+  # OpenAI GPT-5 (Latest flagship)
+  - id: azure:chat:gpt-5
+    label: gpt-5
     config:
       apiHost: 'your-resource.openai.azure.com'
       max_tokens: 1024
       temperature: 0.7
 
-  # Anthropic Claude
+  # Anthropic Claude Sonnet 4.5
   - id: azure:chat:claude-sonnet-4-5-20250929
     label: claude-sonnet
     config:
@@ -26,16 +26,16 @@ providers:
       max_tokens: 1024
       temperature: 0.7
 
-  # Meta Llama
-  - id: azure:chat:Llama-3.3-70B-Instruct
-    label: llama-3.3
+  # Meta Llama 4 Maverick
+  - id: azure:chat:Llama-4-Maverick-17B-128E-Instruct-FP8
+    label: llama-4
     config:
       apiHost: 'your-deployment.services.ai.azure.com'
       apiVersion: '2025-04-01-preview'
       max_tokens: 1024
       temperature: 0.7
 
-  # Mistral
+  # Mistral Large
   - id: azure:chat:Mistral-Large-2411
     label: mistral-large
     config:
