--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "@aws-sdk/client-sagemaker-runtime": "^3.940.0",
     "@aws-sdk/credential-provider-sso": "^3.940.0",
     "@aws-sdk/types": "^3.936.0",
+    "@smithy/types": "^4.9.0",
     "@azure/identity": "^4.13.0",
     "@azure/openai-assistants": "^1.0.0-beta.6",
     "@biomejs/biome": "^2.3.7",
