--- a/examples/dynamic-var/promptfooconfig.yaml
+++ b/examples/dynamic-var/promptfooconfig.yaml
@@ -1,13 +1,37 @@
 # yaml-language-server: $schema=https://promptfoo.dev/config-schema.json
-description: 'Dynamic var example'
+description: 'Dynamic variable generation'
 
 prompts:
-  - "You are an office assistant. Using this context:\n\n<context>{{context}}</context>\n\nAnswer this question:\n\n<question>{{question}}</question>"
+  - |
+    You are a helpful HR assistant. Using this context:
+
+    <context>{{context}}</context>
+
+    Answer this question concisely: {{question}}
 
 providers:
   - openai:gpt-4.1-mini
 
 tests:
+  # Each test has a different question, and the context is dynamically
+  # loaded based on the question using the Python script
   - vars:
       question: 'What is the parental leave policy?'
-      context: file://./load_context.py
+      context: file://load_context.py
+    assert:
+      - type: contains
+        value: 'parental'
+
+  - vars:
+      question: 'How many vacation days do employees get?'
+      context: file://load_context.py
+    assert:
+      - type: contains
+        value: 'vacation'
+
+  - vars:
+      question: 'What are the remote work guidelines?'
+      context: file://load_context.py
+    assert:
+      - type: contains
+        value: 'remote'
